update action input interfaces